--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,7 +30,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In Minkowski distance, \"p\" and \"d\" are two parameters used to calculate the distance between two points in a d-dimensional space.\n",
+    "\n",
+    "\"p\" represents the power or order of the Minkowski distance formula, and determines the nature of the distance metric. For example, when \"p\" = 1, the Minkowski distance becomes the Manhattan distance, and when \"p\" = 2, it becomes the Euclidean distance. When \"p\" approaches infinity, the Minkowski distance becomes the Chebyshev distance.\n",
+    "\n",
+    "\"d\" is the number of dimensions or features in the data space. Each feature represents a different aspect of the data, and the Minkowski distance formula calculates the distance between the two points based on the values of these features. The value of \"d\" can be any positive integer and determines the number of terms in the formula.\n",
+    "\n",
+    "In summary, the Minkowski distance formula uses the values of \"p\" and \"d\" to calculate the distance between two points in a d-dimensional space, taking into account the order (or power) of the distance metric, and the number of features or dimensions in the data."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,10 +50,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The Euclidean distance is a straight-line distance between two points in a multi-dimensional space. It is calculated as the square root of the sum of the squares of the differences between the corresponding elements of the two points. The Euclidean distance is a good measure of similarity between two points when the dimensions are equally important and the relationships between dimensions are linear.\n",
+    "\n",
+    "On the other hand, the Manhattan distance (also known as the taxicab distance) is a distance metric that measures the absolute differences between the coordinates of two points and sums them up. It is calculated as the sum of the absolute differences between the corresponding elements of the two points. The Manhattan distance is useful when the dimensions are not equally important, and when the relationships between dimensions are not linear.\n",
+    "\n",
+    "In summary, the main difference between the Euclidean distance and the Manhattan distance is the way they measure the distance between two points. The Euclidean distance uses a straight-line distance measure, while the Manhattan distance uses a sum of absolute differences measure. The choice of distance metric depends on the characteristics of the data and the nature of the problem being solved."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,7 +75,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When the value of \"p\" in the Minkowski distance formula is very large, the distance metric becomes increasingly sensitive to the largest differences between the elements of the two points being compared. This means that the distance between two points would be dominated by the largest difference in a single dimension, regardless of the differences in other dimensions.\n",
+    "\n",
+    "In other words, when \"p\" is very large, the Minkowski distance becomes equivalent to the Chebyshev distance, which is also known as the maximum metric or the L∞ metric. The Chebyshev distance measures the maximum difference between the elements of two points, rather than the sum of the differences, as in the Manhattan distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +91,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The Minkowski distance is not always a valid distance function when \"p\" is less than 1. A distance function must satisfy the following properties:\n",
+    "\n",
+    "Non-negativity: The distance between two points must be non-negative, with zero distance only between the same point.\n",
+    "Symmetry: The distance between two points must be the same in either direction.\n",
+    "Triangle inequality: The distance between two points must be less than or equal to the sum of the distances between each point and a third point.\n",
+    "For values of \"p\" greater than or equal to 1, the Minkowski distance satisfies these properties and is therefore a valid distance function. However, when \"p\" is less than 1, the Minkowski distance may not satisfy the triangle inequality, which is a crucial property for a valid distance function. This is because the Minkowski distance with \"p\" less than 1 is not a metric in the mathematical sense.\n",
+    "\n",
+    "In summary, the Minkowski distance is only a valid distance function when \"p\" is greater than or equal to 1, as it satisfies the necessary properties for a distance function in this case. When \"p\" is less than 1, the Minkowski distance may not satisfy the triangle inequality and is therefore not considered a valid distance function."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,7 +112,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Cosine similarity and Euclidean distance are two different measures used to determine the similarity between two vectors in a multi-dimensional space. The choice between these two measures depends on the nature of the data and the problem being solved.\n",
+    "\n",
+    "Euclidean distance is a measure of the straight-line distance between two points in a multi-dimensional space. It is appropriate for use when the dimensions are equally important and the relationships between dimensions are linear. In these cases, the Euclidean distance can be a good measure of the similarity between two vectors, as it takes into account the differences in all dimensions.\n",
+    "\n",
+    "Cosine similarity, on the other hand, is a measure of the cosine of the angle between two vectors. It is a measure of the similarity between two vectors, with values ranging from -1 (completely dissimilar) to 1 (identical). Cosine similarity is often used when the relationships between dimensions are not linear and when the length of the vectors is more important than the differences in individual dimensions."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +130,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The Jaccard distance and the Manhattan distance are both measures of the similarity between two sets of data. However, they differ in their definition and the information they take into account.\n",
+    "\n",
+    "The Manhattan distance, also known as the taxicab distance or L1 distance, measures the absolute differences between the elements of two sets and sums them up. It is a measure of the difference between two sets, with values ranging from 0 (identical) to infinity (completely dissimilar). The Manhattan distance does not take into account the size of the sets or the number of common elements between them."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +177,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -152,15 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['name', 'my', 'hello', 'Alice', 'is', 'Bob']\n",
+      "[1, 1, 1, 1, 1, 0]\n"
      ]
     }
    ],
@@ -181,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,13 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['name', 'Claude', 'hello', 'Alice', 'is', 'hi', 'my', 'Bob']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,10 +256,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 0, 1, 0, 1, 0, 1, 1]\n",
+      "[1, 1, 0, 0, 1, 1, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "print(v2)\n",
+    "print(v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,10 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def manhattan_dist(x, y):\n",
+    "    res = 0\n",
+    "    for i in range(len(x)):\n",
+    "        res += abs(x[i]- y[i])\n",
+    "    return res"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +318,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 1. 0. 0. 0. 0.]\n",
+      " [0. 1. 1. 0. 0. 1. 1. 1.]\n",
+      " [1. 0. 1. 0. 1. 1. 1. 1.]\n",
+      " [0. 1. 0. 1. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "sentences = [\"hi Alice\", \"hello Claude\", \"Bob my name is Claude\", \"hi Claude my name is Alice\", \"hello Bob\"]\n",
+    "\n",
+    "# Define a vocabulary of words\n",
+    "vocab = sorted(set(word for sentence in sentences for word in sentence.split()))\n",
+    "word_to_ix = {word: i for i, word in enumerate(vocab)}\n",
+    "\n",
+    "# Convert sentences to a matrix of word indices\n",
+    "sentence_vectors = np.zeros((len(sentences), len(vocab)))\n",
+    "for i, sentence in enumerate(sentences):\n",
+    "    for word in sentence.split():\n",
+    "        sentence_vectors[i, word_to_ix[word]] = 1\n",
+    "\n",
+    "print(sentence_vectors)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,14 +359,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The matrix created in the previous answer will have len(sentences) rows and len(vocab) columns.\n",
+    "In this specific example, the number of rows is 5, which is the number of sentences, and the number of columns is 11, which is the size of the vocabulary."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,11 +374,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In this example, the two most similar sentences will be \"hi Alice\" and \"hi Claude my name is Alice\", as they both contain the words \"hi\" and \"Alice\". The distance between these two sentences will be the smallest among all possible pairs, so they will be the most similar according to the Manhattan distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,7 +386,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -368,7 +461,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -382,9 +475,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
