--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Youheng Yang $\\newline$\n",
+    "UID:  U45006780\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,9 +29,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "d means the number of dimension and p means a coefficient that determine how many levels of \"shortcut\" it can cross in the distance function."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,9 +44,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Manhattan distance is the distance of the path that we can only follow the route between points based on the dimensions."
+   ]
   },
   {
    "attachments": {},
@@ -61,9 +67,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "the distance would be smaller and smaller."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,9 +82,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No.\n",
+    "For example, we have tree point: A:(0,0), B:(0,1), C:(1,0). D(A,B) + D(A,C) = 2, D(B,C) is 4 based on the formula of minkowski distance with p = $\\frac{1}{2}$, Thus, it violates the triangle rule of distance function since 4 > 2."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,9 +98,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "when we care more about directions instead of magnitude"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,9 +113,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "the size of the intersections"
+   ]
   },
   {
    "attachments": {},
@@ -113,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,15 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['Bob', 'hello', 'Alice', 'name', 'my', 'is']\n",
+      "[0, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,10 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bob', 'hello', 'Alice', 'Claude', 'name', 'my', 'hi', 'is']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 0, 1, 1, 0, 1] [1, 1, 0, 0, 1, 1, 0, 1] [0, 0, 0, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v1, v2, v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,10 +270,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def d(x, y):\n",
+    "    count = 0\n",
+    "    for i in range(len(x)):\n",
+    "        if x[i] != y[i]:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "print(d(v1, v2), d(v2, v3), d(v1, v3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +312,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 1, 0, 0, 0, 1, 0], [0, 1, 0, 1, 0, 0, 0, 0], [1, 0, 0, 1, 1, 1, 0, 1], [0, 0, 1, 1, 1, 1, 1, 1], [1, 1, 0, 0, 0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"hi Alice\"\n",
+    "s2 = \"hello Claude\"\n",
+    "s3 = \"Bob my name is Claude\"\n",
+    "s4 = \"hi Claude my name is Alice\"\n",
+    "s5 = \"hello Bob\"\n",
+    "\n",
+    "corpus = [s1, s2, s3, s4, s5]\n",
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "vectors = []\n",
+    "for s in corpus:\n",
+    "    vectors.append([1 if x in s else 0 for x in all_words])\n",
+    "print(vectors)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,10 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "row:  5  col:  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"row: \", len(vectors), \" col: \", len(vectors[0]))"
+   ]
   },
   {
    "attachments": {},
@@ -281,10 +372,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('hello Claude', 'hello Bob')\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim = (corpus[0], corpus[1])\n",
+    "m = d(vectors[0], vectors[1])\n",
+    "for i in range(5):\n",
+    "    for j in range(i+1, 5):\n",
+    "        temp = d(vectors[i], vectors[j])\n",
+    "        if temp < m:\n",
+    "            m = temp\n",
+    "            sim = (corpus[i], corpus[j])\n",
+    "print(sim)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -325,9 +435,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[0, 0.5]: 0.25 ; [2, 1.5, 6, 6.5, 7]: 4.6\\\n",
+    "[0, 0.5, 1.5, 2]: 1 ; [6, 6.5, 7] : 6.5\\\n",
+    "[0, 0.5, 1.5, 2]: 1 ; [6, 6.5, 7] : 6.5\\\n",
+    "converge"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,9 +453,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A smaller value means a better result of custering"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,9 +468,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Because we pick up the first K randomly so the results would be differnet."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -361,9 +483,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. It's possible that it always change the position of centroids."
+   ]
   }
  ],
  "metadata": {
@@ -382,12 +507,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
