--- a/worksheets/worksheet_02.ipynb
+++ b/worksheets/worksheet_02.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 02\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "- Name: Haoran Chen\n",
+    "- UID: U84518176\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -20,9 +20,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "This approach requires a clear understanding of the problem and then breaking it down into small problem. But the initial understanding of the problem could be wrong or incomplete."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,9 +35,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "This approach requires first implementing the building blocks of the program then combining them all toghter. But it is hard to know all the building blocks you need at the start."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,16 +50,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Read and understand the error massage\n",
+    "- Re-read the code and see which part could cause the error\n",
+    "- Look up online for some help"
+   ]
   },
   {
    "attachments": {},
@@ -79,12 +83,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "b301cde804752a95cb20f89102c03dd0619f7abaebebce7a7bde78ba4ed591c7"
    }
   }
  },
