--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "- Name: Haoran Chen\n",
+    "- UID: U84518176\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,9 +29,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- \"p\" determines the order of the Minkowski distance.\n",
+    "- \"d\" represents the number of dimensions of the input data."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,9 +45,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Euclidean distance calculates the straight-line distance between two points, while Manhattan distance calculates the sum of the absolute differences between the coordinates of the two points."
+   ]
   },
   {
    "attachments": {},
@@ -61,9 +68,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "d(A,B) will be very close to 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,9 +83,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, because it violates triangle inequality when p < 1."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,9 +98,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When direction matters more than magnitude."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,9 +113,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The size of intersection."
+   ]
   },
   {
    "attachments": {},
@@ -113,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,15 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['Alice', 'my', 'hello', 'Bob', 'name', 'is']\n",
+      "[1, 1, 1, 0, 1, 1]\n"
      ]
     }
    ],
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,10 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'my', 'hello', 'Bob', 'name', 'is', 'hi', 'Claude']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +243,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 0, 1, 1, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1, 0, 0]\n",
+      "[0, 1, 0, 0, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "print(v2)\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,15 +274,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def manhattan_dist(v1, v2):\n",
+    "    res = 0\n",
+    "    for i in range(len(v1)):\n",
+    "        res += abs(v1[i] - v2[i])\n",
+    "    return res\n",
+    "\n",
+    "print(manhattan_dist(v1, v2))\n",
+    "print(manhattan_dist(v1, v3))\n",
+    "print(manhattan_dist(v2, v3))"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "v1 and v2 are the most similar."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +322,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 0, 0, 0, 0, 1, 0], [0, 0, 1, 0, 0, 0, 0, 1], [0, 1, 0, 1, 1, 1, 0, 1], [1, 1, 0, 0, 1, 1, 1, 1], [0, 0, 1, 1, 0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"hi Alice\"\n",
+    "s2 = \"hello Claude\"\n",
+    "s3 = \"Bob my name is Claude\"\n",
+    "s4 = \"hi Claude my name is Alice\"\n",
+    "s5 = \"hello Bob\"\n",
+    "\n",
+    "all_sentences = [s1, s2, s3, s4, s5]\n",
+    "all_words = list(set([item for x in all_sentences for item in x.split()]))\n",
+    "\n",
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "v4 = [1 if x in s4 else 0 for x in all_words]\n",
+    "v5 = [1 if x in s5 else 0 for x in all_words]\n",
+    "\n",
+    "matrix = [v1, v2, v3, v4, v5]\n",
+    "print(matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,10 +362,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of Row: 5\n",
+      "Num of Col: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Num of Row: \" + str(len(matrix)))\n",
+    "print(\"Num of Col: \" + str(len(matrix[0])))"
+   ]
   },
   {
    "attachments": {},
@@ -281,15 +389,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_min_dist(matrix):\n",
+    "    res_i = 0\n",
+    "    res_j = 0\n",
+    "    res = 999\n",
+    "    for i in range(len(matrix)):\n",
+    "        for j in range(i+1, len(matrix)):\n",
+    "            if manhattan_dist(matrix[i], matrix[j]) < res: \n",
+    "                res = manhattan_dist(matrix[i], matrix[j])\n",
+    "                res_i = i\n",
+    "                res_j = j\n",
+    "    return (res_i+1, res_j+1)\n",
+    "\n",
+    "print(find_min_dist(matrix))"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "v2 and v5 are the most similar."
+   ]
   },
   {
    "attachments": {},
@@ -325,9 +458,25 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Assign each data point to the closest centroid:\n",
+    "- Cluster 1 (centroid 0): [0, 0.5]\n",
+    "- Cluster 2 (centroid 2): [1.5, 2, 6, 6.5, 7]\n",
+    "\n",
+    "2. Recalculate the centroids as the mean of the points in each cluster:\n",
+    "- New centroid 1: (0 + 0.5) / 2 = 0.25\n",
+    "- New centroid 2: (1.5 + 2 + 6 + 6.5 + 7) / 5 = 5.3\n",
+    "\n",
+    "3. Repeat the process of assigning each data point to the closest centroid and recalculating the centroids until the centroids no longer change.\n",
+    "- Cluster 1 (centroid 0.25): [0, 0.5]\n",
+    "- Cluster 2 (centroid 5.3): [1.5, 2, 6, 6.5, 7]\n",
+    "\n",
+    "- New centroid 1: (0 + 0.5) / 2 = 0.25\n",
+    "- New centroid 2: (1.5 + 2 + 6 + 6.5 + 7) / 5 = 5.3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,9 +486,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function for k-means calculates the total difference between each data point and its assigned centroid. The goal of the k-means algorithm is to find the clustering solution that minimizes the cost function,."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,9 +501,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The algorithm starts with an initial set of centroids, and the final solution can be sensitive to the choice of these initial centroids. Different initial set of centroids might lead to different solutions."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -361,9 +516,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. Because if there is an empty cluster, the algorithm cannot update the centroid since no data points are assigned to that centroid, it will keep oscillating between different solutions."
+   ]
   }
  ],
  "metadata": {
@@ -382,12 +540,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "b301cde804752a95cb20f89102c03dd0619f7abaebebce7a7bde78ba4ed591c7"
    }
   }
  },
