--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "- Name: Haoran Chen\n",
+    "- UID: U84518176\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -24,9 +24,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Confirmation Bias"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,9 +39,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(1,2,3) and (3,2,1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,9 +54,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,9 +73,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Positive\n",
+    "- Negative\n",
+    "- Negative"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,9 +90,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C"
+   ]
   },
   {
    "attachments": {},
@@ -89,9 +106,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Process Data\n",
+    "2. Explore Data\n",
+    "3. Extract Features\n",
+    "4. Create Model"
+   ]
   },
   {
    "attachments": {},
@@ -107,9 +130,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Record: m-dimensional points/vectors\n",
+    "- Graph: Adjacency Matrix/List\n",
+    "- Image: Pixel\n",
+    "- Text: List of Words "
+   ]
   },
   {
    "attachments": {},
@@ -120,9 +149,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Clustering data points, for example: A retailer has data on customer demographics and purchase history, An unsupervised learning algorithm, such as k-means clustering, can be used to identify natural groupings within the customer data. The algorithm will group similar customers together based on their demographics and purchase history."
+   ]
   },
   {
    "attachments": {},
@@ -133,9 +165,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Using a predictive model to classify whether a tumor is malignant based on the age of the patient and tumor size."
+   ]
   }
  ],
  "metadata": {
@@ -154,12 +189,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "b301cde804752a95cb20f89102c03dd0619f7abaebebce7a7bde78ba4ed591c7"
    }
   }
  },
